Fix z-index on paginator

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -8,7 +8,7 @@
 }
 
 .page-item.active .page-link {
-    z-index: -1;
+    z-index: 0;
 }
 
 @media screen and ( max-width: 512px ) {
